--- a/frappe/templates/print_formats/standard_macros.html
+++ b/frappe/templates/print_formats/standard_macros.html
@@ -33,10 +33,10 @@
 		{%- set visible_columns = get_visible_columns(doc.get(df.fieldname),
 			table_meta, df) -%}
 		<div {{ fieldmeta(df) }}>
-			<table class="table table-bordered table-condensed">
-				<thead>
+			<table class="table table-bordered table-condensed" >
+				<thead >
 					<tr>
-						<th style="width: 40px" class="table-sr">{{ _("Sr") }}</th>
+						<th style="width: 100px" class="table-sr">{{ _("Sr") }}</th>
 						{% for tdf in visible_columns %}
 						{% if (data and not data[0].flags.compact_item_print) or tdf.fieldname in doc.get(df.fieldname)[0].flags.compact_item_fields %}
 							<th style="width: {{ get_width(tdf) }};" class="{{ get_align_class(tdf) }}" {{ fieldmeta(df) }}>
@@ -143,7 +143,7 @@ data-fieldname="{{ df.fieldname }}" data-fieldtype="{{ df.fieldtype }}"
 
 {% macro get_align_class(df) %}
 	{%- if df.align -%}{{ "text-" + df.align }}
-	{%- elif df.fieldtype in ("Int", "Float", "Currency", "Check") -%}{{ "text-right" }}
+	{%- elif df.fieldtype in ("Int", "Float", "Currency", "Check") -%}
 	{%- else -%}{{ "" }}
 	{%- endif -%}
 {% endmacro %}
